--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
     "guzzlehttp/guzzle": "^7.0",
     "yiisoft/yii2": "^2.0"
   },
+  "require-dev": {
+    "rector/rector": "^1.0",
+    "symfony/var-dumper": "^6.3",
+    "symplify/easy-coding-standard": "^12.0"
+  },
   "autoload": {
     "psr-4": {
       "davidhirtz\\yii2\\vite\\": "src"
@@ -29,5 +34,11 @@
     "allow-plugins": {
       "yiisoft/yii2-composer": true
     }
+  },
+  "scripts": {
+    "check-cs": "ecs check --ansi",
+    "fix-cs": "ecs check --ansi --fix",
+    "phpstan": "phpstan --memory-limit=1G",
+    "rector": "rector"
   }
 }
